--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
       шапка
     </div>
 
-    <div class="row">
+    <div class="row soon">
         <div class="col-md-4">
           <h2>скоро</h2>
         </div>
         <div class="col-md-8">
-          <article class="soon">
-            <div class="title">Бодрые карточки<span>исследуем</span></div>
+          <article>
+            <div class="title">Бодрые карточки<span class="orange">исследуем</span></div>
             <div class="content">
               Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!
             </div>
           </article>
           <article class="soon">
-            <div class="title">Бодрые карточки<span>исследуем</span></div>
+            <div class="title">Бодрые карточки<span class="blue">исследуем</span></div>
             <div class="content">
               Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!
             </div>
