--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
 
   <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet">
+
+  <!-- Custom js for this template -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   
   <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik" rel="stylesheet">
+  <script>
+    $('.collapse').collapse()
+  </script>
 </head>
 
 <body>
@@ -37,7 +45,7 @@
               </div>
             </article>
             <article class="soon">
-              <div class="title">Бодрые карточки<span class="blue">исследуем</span></div>
+              <div class="title">Бодрые карточки<span class="blue">в дизайне</span></div>
               <div class="content">
                 Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!
               </div>
@@ -50,7 +58,7 @@
         <div class="container">
           <h2>🐰 Апрель</h2>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-5">
           <h3>новьё</h3>
           <article>
             <div class="title">Бодрые карточки</div>
@@ -60,7 +68,8 @@
             </div>
           </article>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-5">
           <h3>починили</h3>
           <article>
             <div class="title">Бодрые карточки</div>
