--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="author" content="">
   <!-- <link rel="icon" href="../../../../favicon.ico"> -->
 
-  <title>Starter Template for Bootstrap</title>
+  <title>Whats new - Teachbase хахатон</title>
 
   <!-- Bootstrap core CSS -->
   <link href="css/dist/bootstrap.min.css" rel="stylesheet">
@@ -15,43 +15,113 @@
   <link href="css/timeline.css" rel="stylesheet">
 
   <!-- Custom js for this template -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   
   <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik" rel="stylesheet">
-  <script>
-    $('.collapse').collapse()
-  </script>
 </head>
 
 <body>
 
   <main role="main" class="container-fluid">
     <div class="row head">
-      шапка
+
       <div class="round-img"></div>
     </div>
+
     <div class="container">
+
       <div class="row soon">
-          <div class="col-lg-4">
-            <h2>скоро</h2>
-          </div>
-          <div class="col-lg-8">
-            <article>
-              <div class="title">Бодрые карточки<span class="orange">исследуем</span></div>
-              <div class="content">
-                Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!
+        <div class="col-lg-4">
+          <h2>скоро</h2>
+        </div>
+        <div class="col-lg-8">
+          <article>
+            <div class="title">Сводный отчёт для мастер аккаунта<span class="orange">исследуем</span></div>
+            <div class="content">
+              Может, вы не знали, у нас есть мастер-аккаунты, из которых можно управлять всеми дочерними аккаунтами и курсами. Мы работаем над сводным отчётом, который показывает статистику по всем слэйв-аккаунтам в одном *.xlsx файле.
+            </div>
+          </article>
+          <article class="soon">
+            <div class="title">Еженедельные отчеты на почту<span class="blue">в дизайне</span></div>
+            <div class="content">
+              Teachbase собирает огромные массивы данных и строит статистику по разным параметрам. Всё это можно посмотреть и выгрузить в личном кабинете менеджера. Каждый понедельник только нужные цифры о процессе обучения на вашу почту. Получил, посмотрел, что всё идет по плану. Что-то не так - пнул кого нужно и
+            </div>
+          </article>
+          <article class="soon">
+            <div class="title">Изменение уже отправленной оценки<span class="green">в разработке</span></div>
+            <div class="content">
+              При проверка заданий поставили не ту оценку или комментарий? Не проблема! Добавим возможность их отредактировать. 
+            </div>
+          </article>
+          <article class="soon">
+            <div class="title">Управление email уведомлениями<span class="green">в разработке</span></div>
+            <div class="content">
+              Вы достаточно настрадались. Teachbase отправляет множество уведомлений о разных действиях и изменениях. Кому-то жизненно необходимо следить за каждым чихом, кому-то только за ответами учеников, а самому главному вообще достаточно только счет получать. Скоро сможете управлять уведомлениями и их периодичностью.
+            </div>
+          </article>
+        </div>
+      </div>
+
+      <div class="row changes">
+        <div class="container">
+          <ul class="timeline">
+            <li class="timeline-inverted">
+              <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h2>🐰 Апрель</h2>
+                </div>
+                <div class="timeline-body">
+                  <div class="card-columns">
+                    <div class="card">
+                      <div class="card-body">
+                        <h5 class="card-title">🚀 <span>#новьё</span> Бодрые карточки</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      </div>
+                    </div>
+                    <hr>
+                    <div class="card">
+                      <div class="card-body">
+                        <h5 class="card-title">🔧 <span>#улучшили</span> Бодрые карточки</h5>
+                        <p class="card-text">Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!</p>
+                      </div>
+                    </div>
+                    <hr>
+                    <div class="card">
+                      <div class="card-body">
+                        <h5 class="card-title">🐛 <span>#починили</span> Бодрые карточки</h5>
+                        <p class="card-text">Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире! Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!</p>
+                      </div>
+                    </div>
+                    <hr>
+                    <div class="card">
+                      <div class="card-body">
+                        <h5 class="card-title">🚀 <span>#новьё</span> Бодрые карточки</h5>
+                        <p class="card-text">Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире! Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире! Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
-            </article>
-            <article class="soon">
-              <div class="title">Бодрые карточки<span class="blue">в дизайне</span></div>
-              <div class="content">
-                Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!
+            </li>
+          </ul>
+        
+          <ul class="timeline">
+            <li class="timeline-inverted">
+              <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                </div>
+                <div class="timeline-body">
+                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                  <p>Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque et turpis posuere pulvinar pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.</p>
+                </div>
               </div>
-            </article>
-          </div>
+            </li>
+          </ul>
+        </div>
+
       </div>
 
       <div class="row changes">
@@ -86,37 +156,15 @@
       <h1>Bootstrap starter template</h1>
       <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
     </div> -->
-<div class="container">
-    <ul class="timeline">
-      <li class="timeline-inverted">
-        <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
-        <div class="timeline-panel">
-          <div class="timeline-heading">
-            <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-          </div>
-          <div class="timeline-body">
-            <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-            <p>Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque et turpis posuere pulvinar pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.</p>
-          </div>
-        </div>
-      </li>
-    </ul>
 
-    <ul class="timeline">
-        <li class="timeline-inverted">
-          <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-            </div>
-            <div class="timeline-body">
-              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-              <p>Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque et turpis posuere pulvinar pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.</p>
-            </div>
-          </div>
-        </li>
-      </ul>
-</div>
+
+
+
+
+    <!-- sdfgsdfgs -->
+
+    
+
   </main><!-- /.container -->
 
   <!-- Bootstrap core JavaScript
