--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet">
   <link href="css/timeline.css" rel="stylesheet">
+  <link href="css/team.css" rel="stylesheet">
 
   <!-- Custom js for this template -->
   
