--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
         <div class="container">
           <ul class="timeline">
             <li class="timeline-inverted">
+              <div class="timeline-heading">
+                <h4>Апрель</h4>
+              </div>
               <div class="timeline-badge"><i class="glyphicon glyphicon-credit-card"></i></div>
               <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h2>🐰 Апрель</h2>
-                </div>
                 <div class="timeline-body">
                   <div class="card-columns">
                     <div class="card">
@@ -112,11 +112,11 @@
 
           <ul class="timeline">
             <li class="timeline-inverted">
+              <div class="timeline-heading">
+                <h4>март</h4>
+              </div>
               <div class="timeline-badge"><i class="glyphicon glyphicon-credit-card"></i></div>
               <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h2>🏟 март</h2>
-                </div>
                 <div class="timeline-body">
                   <div class="card-columns">
                     <div class="card">
@@ -153,6 +153,48 @@
             </li>
           </ul>
         
+          <ul class="timeline">
+              <li class="timeline-inverted">
+                <div class="timeline-heading">
+                  <h4>март</h4>
+                </div>
+                <div class="timeline-badge"><i class="glyphicon glyphicon-credit-card"></i></div>
+                <div class="timeline-panel">
+                  <div class="timeline-body">
+                    <div class="card-columns">
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">🚀 <span>#новьё</span> Бодрые карточки</h5>
+                          <img class="card-img-top" data-src="holder.js/100px160/" alt="100%x160" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22266%22%20height%3D%22160%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20266%20160%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16a2ca32693%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16a2ca32693%22%3E%3Crect%20width%3D%22266%22%20height%3D%22160%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2299.7578125%22%20y%3D%2286%22%3E266x160%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true" style="height: 260px; width: 100%; display: block; margin-bottom: .75rem;">
+                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">🔧 <span>#улучшили</span> Бодрые карточки</h5>
+                          <p class="card-text">Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!</p>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">🐛 <span>#починили</span> Бодрые карточки</h5>
+                          <p class="card-text">Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире! Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!</p>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">🚀 <span>#новьё</span> Бодрые карточки</h5>
+                          <p class="card-text">Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире! Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире! Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ul>
           <!-- <ul class="timeline">
             <li class="timeline-inverted">
               <div class="timeline-badge"><i class="glyphicon glyphicon-credit-card"></i></div>
