--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 
   <main role="main" class="container-fluid">
     <div class="row head">
-
       <div class="round-img"></div>
+      <div class="go-back">&larr;&nbsp;  <a href="https://teachbase.ru">Вернуться на главную</a></div>
+      <div class="updates-text">ОБНОВЛЕНИЯ</div>
+      <div class="tb-logo"></div>
     </div>
 
     <div class="container">
