--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
                 </div>
                 <div class="timeline-badge"><i class="glyphicon glyphicon-credit-card"></i></div>
                 <div class="timeline-panel">
+                  <div class="timeline-emoji">🌋</div>
+                  <div class="timeline-subtitle">5 фичей, 3 фикса и краткий анонс что это такое</div>
                   <div class="timeline-body">
                     <div class="card-columns">
                       <div class="card">
