--- a/index.html
+++ b/index.html
@@ -57,38 +57,38 @@
                     <div class="row developers">
                       <div class="developer">
                         <div class="bubble">
-                          <p class="speech">Фигачит!</p>
+                          <p class="speech" id="dev_phraze_1"></p>
                         </div>
                         <div class="face">🦑</div>
-                        <div class="name">Артем</div>
+                        <div class="name" id="dev_name_1"></div>
                       </div>
                       <div class="developer">
                         <div class="bubble">
-                          <p class="speech">Zzzz...</p>
+                          <p class="speech" id="dev_phraze_2"></p>
                         </div>
                         <div class="face">🐝</div>
-                        <div class="name">Стас</div>
+                        <div class="name" id="dev_name_2"></div>
                       </div>
                       <div class="developer">
                         <div class="bubble">
-                          <p class="speech">Zzzz...</p>
+                          <p class="speech" id="dev_phraze_3"></p>
                         </div>
-                        <div class="face">🦚</div>
-                        <div class="name">Стас</div>
+                        <div class="face">👾</div>
+                        <div class="name" id="dev_name_3"></div>
                       </div>
                       <div class="developer">
                         <div class="bubble">
-                          <p class="speech">Zzzz...</p>
+                          <p class="speech" id="dev_phraze_4"></p>
                         </div>
                         <div class="face">🐳</div>
-                        <div class="name">Стас</div>
+                        <div class="name" id="dev_name_4"></div>
                       </div>
                       <div class="developer">
                         <div class="bubble">
-                          <p class="speech">Zzzz...</p>
+                          <p class="speech" id="dev_phraze_5"></p>
                         </div>
                         <div class="face">🦐</div>
-                        <div class="name">Стас</div>
+                        <div class="name" id="dev_name_5"></div>
                       </div>
                     </div>
                     <div class="row">
