--- a/index.html
+++ b/index.html
@@ -61,35 +61,35 @@
                         <div class="bubble">
                           <p class="speech" id="dev_phraze_1"></p>
                         </div>
-                        <div class="face">🦑</div>
+                        <div class="face" id="dev_face_1"></div>
                         <div class="name" id="dev_name_1"></div>
                       </div>
                       <div class="developer">
                         <div class="bubble">
                           <p class="speech" id="dev_phraze_2"></p>
                         </div>
-                        <div class="face">🐝</div>
+                        <div class="face" id="dev_face_2"></div>
                         <div class="name" id="dev_name_2"></div>
                       </div>
                       <div class="developer">
                         <div class="bubble">
                           <p class="speech" id="dev_phraze_3"></p>
                         </div>
-                        <div class="face">👾</div>
+                        <div class="face" id="dev_face_3"></div>
                         <div class="name" id="dev_name_3"></div>
                       </div>
                       <div class="developer">
                         <div class="bubble">
                           <p class="speech" id="dev_phraze_4"></p>
                         </div>
-                        <div class="face">🐳</div>
+                        <div class="face" id="dev_face_4"></div>
                         <div class="name" id="dev_name_4"></div>
                       </div>
                       <div class="developer">
                         <div class="bubble">
                           <p class="speech" id="dev_phraze_5"></p>
                         </div>
-                        <div class="face">🦐</div>
+                        <div class="face" id="dev_face_5"></div>
                         <div class="name" id="dev_name_5"></div>
                       </div>
                     </div>
