--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="utf-8">
@@ -10,6 +11,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/dist/bootstrap.min.css" rel="stylesheet">
+    <link href="css/dist/bootstrap.grid.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
@@ -48,7 +50,11 @@
           <div class="container">
             <ul class="timeline">
               <li class="timeline-inverted">
-                <div class="timeline-badge"><i class="fas fa-arrow-alt-circle-right"></i></div>
+                <div class="timeline-badge">
+                  <span style="font-size: 0.5em; color: #000; top: -14.4px; position: absolute; left: 5.1px; color: #000;">
+                    <i class="fas fa-circle"></i>
+                  </span>
+                </div>
                 <div class="row">
                   <div class="col-lg-4">
                     <div class="timeline-title">
@@ -137,7 +143,11 @@
                   <h4>Апрель</h4>
                   <div class="last-updated">последнее обновление 18 апреля</div>
                 </div>
-                <div class="timeline-badge"><i class="glyphicon glyphicon-credit-card"></i></div>
+                <div class="timeline-badge">
+                  <span style="font-size: 0.9em; color: #000; top: -16px; position: absolute; left: 3px; color: #000;">
+                    <i class="fas fa-check"></i>
+                  </span>
+                </div>
                 <div class="timeline-panel">
                   <div class="timeline-body">
                     <div class="card-columns">
@@ -180,7 +190,11 @@
                   <h4>март</h4>
                   <div class="last-updated">последнее обновление 31 марта</div>
                 </div>
-                <div class="timeline-badge"><i class="glyphicon glyphicon-credit-card"></i></div>
+                <div class="timeline-badge">
+                  <span style="font-size: 0.9em; color: #000; top: -16px; position: absolute; left: 3px; color: #000;">
+                    <i class="fas fa-check"></i>
+                  </span>
+                </div>
                 <div class="timeline-panel">
                   <div class="timeline-body">
                     <div class="card-columns">
