--- a/index.html
+++ b/index.html
@@ -235,13 +235,17 @@
             <ul class="timeline">
               <li class="timeline-inverted">
                 <div class="timeline-title">
-                  <h4>март</h4>
+                  <h4>февраль</h4>
                 </div>
-                <div class="timeline-badge"><i class="glyphicon glyphicon-credit-card"></i></div>
+                <div class="timeline-badge">
+                  <span style="font-size: 0.9em; color: #000; top: -16px; position: absolute; left: 3px; color: #000;">
+                    <i class="fas fa-check"></i>
+                  </span>
+                </div>
                 <div class="timeline-panel">
                   <div class="timeline-emoji">🌋</div>
                   <div class="timeline-subtitle">5 фичей, 3 фикса и краткий анонс что это такое</div>
-                  <div class="timeline-body">
+                  <div class="timeline-body d-none">
                     <div class="card-columns">
                       <div class="card">
                         <div class="card-body">
