--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <li class="timeline-inverted">
                 <div class="timeline-title d-flex justify-content-between">
                   <h4>Апрель</h4>
-                  <div class="last-updated">последнее обновление 18 апреля</div>
+                  <div class="last-updated">Последнее обновление 18 апреля</div>
                 </div>
                 <div class="timeline-badge">
                   <span style="font-size: 0.9em; color: #000; top: -16px; position: absolute; left: 3px; color: #000;">
@@ -165,6 +165,7 @@
                           <p class="card-text">Теперь стало можно через страницу на Tilda регистрировать пользователя в аккаунт, назначать ему курс и привязывать к факту оплаты</p>
                         </div>
                       </div>
+                      <hr>
                       <div class="card">
                         <div class="card-body">
                           <h5 class="card-title">🐛 <span>#улучшили</span> Больше XLSX отчётов</h5>
@@ -188,7 +189,7 @@
               <li class="timeline-inverted">
                 <div class="timeline-title d-flex justify-content-between">
                   <h4>март</h4>
-                  <div class="last-updated">последнее обновление 31 марта</div>
+                  <div class="last-updated">Последнее обновление 31 марта</div>
                 </div>
                 <div class="timeline-badge">
                   <span style="font-size: 0.9em; color: #000; top: -16px; position: absolute; left: 3px; color: #000;">
