--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               </li>
             </ul>
           
-            <ul class="timeline">
+            <ul class="timeline d-none">
               <li class="timeline-inverted">
                 <div class="timeline-title">
                   <h4>февраль</h4>
