--- a/index.html
+++ b/index.html
@@ -148,37 +148,33 @@
                     <i class="fas fa-check"></i>
                   </span>
                 </div>
-                <div class="timeline-panel">
-                  <div class="timeline-body">
-                    <div class="card-columns">
-                      <div class="card">
-                        <div class="card-body">
-                          <h5 class="card-title">🚀 <span>#улучшили</span> Скачивание оригинального документа в курсе</h5>
-                          <img class="card-img-top" alt="text" src="img/gif/download_inital_file.gif">
-                          <p class="card-text">Для скачивания перейдите в содержание курса, нажмите на материал и нажмите на значок редактирования. В окне редактирования будет ссылка "открыть исходник" при нажатии на которую произойдет скачивание материала.</p>
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="card">
-                        <div class="card-body">
-                          <h5 class="card-title">🔧 <span>#новьё</span> Регистрация пользователя в курс через лендинг Tilda.cc</h5>
-                          <p class="card-text">Теперь стало можно через страницу на Tilda регистрировать пользователя в аккаунт, назначать ему курс и привязывать к факту оплаты</p>
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="card">
-                        <div class="card-body">
-                          <h5 class="card-title">🐛 <span>#улучшили</span> Больше XLSX отчётов</h5>
-                          <p class="card-text">Сделали XLSX отчёты по анкетам на странице "Заявки", группам на странице "Слушатели" и вопросам на странице "Статистика"</p>
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="card">
-                        <div class="card-body">
-                          <h5 class="card-title">🚀 <span>#улучшили</span> Отдельные карточки для программ</h5>
-                          <p class="card-text">Для интерфейса слушателя полностью переработали отображение программ на странице активных курсов.</p>
-                        </div>
-                      </div>
+                <div class="timeline-panel card-columns">
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">🚀 <span>#улучшили</span> Скачивание оригинального документа в курсе</h5>
+                      <img class="card-img-top" alt="text" src="img/gif/download_inital_file.gif">
+                      <p class="card-text">Для скачивания перейдите в содержание курса, нажмите на материал и нажмите на значок редактирования. В окне редактирования будет ссылка "открыть исходник" при нажатии на которую произойдет скачивание материала.</p>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">🔧 <span>#новьё</span> Регистрация пользователя в курс через лендинг Tilda.cc</h5>
+                      <p class="card-text">Теперь стало можно через страницу на Tilda регистрировать пользователя в аккаунт, назначать ему курс и привязывать к факту оплаты</p>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">🐛 <span>#улучшили</span> Больше XLSX отчётов</h5>
+                      <p class="card-text">Сделали XLSX отчёты по анкетам на странице "Заявки", группам на странице "Слушатели" и вопросам на странице "Статистика"</p>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">🚀 <span>#улучшили</span> Отдельные карточки для программ</h5>
+                      <p class="card-text">Для интерфейса слушателя полностью переработали отображение программ на странице активных курсов.</p>
                     </div>
                   </div>
                 </div>
@@ -196,37 +192,33 @@
                     <i class="fas fa-check"></i>
                   </span>
                 </div>
-                <div class="timeline-panel">
-                  <div class="timeline-body">
-                    <div class="card-columns">
-                      <div class="card">
-                        <div class="card-body">
-                          <h5 class="card-title">🚀 <span>#новьё</span> Бодрые карточки</h5>
-                          <img class="card-img-top" data-src="holder.js/100px160/" alt="100%x160" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22266%22%20height%3D%22160%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20266%20160%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16a2ca32693%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16a2ca32693%22%3E%3Crect%20width%3D%22266%22%20height%3D%22160%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2299.7578125%22%20y%3D%2286%22%3E266x160%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true" style="height: 260px; width: 100%; display: block; margin-bottom: .75rem;">
-                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="card">
-                        <div class="card-body">
-                          <h5 class="card-title">🔧 <span>#улучшили</span> Бодрые карточки</h5>
-                          <p class="card-text">Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!</p>
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="card">
-                        <div class="card-body">
-                          <h5 class="card-title">🐛 <span>#починили</span> Бодрые карточки</h5>
-                          <p class="card-text">Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире! Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!</p>
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="card">
-                        <div class="card-body">
-                          <h5 class="card-title">🚀 <span>#новьё</span> Бодрые карточки</h5>
-                          <p class="card-text">Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире! Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире! Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!</p>
-                        </div>
-                      </div>
+                <div class="timeline-panel card-columns">
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">🚀 <span>#новьё</span> Бодрые карточки</h5>
+                      <img class="card-img-top" data-src="holder.js/100px160/" alt="100%x160" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22266%22%20height%3D%22160%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20266%20160%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16a2ca32693%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16a2ca32693%22%3E%3Crect%20width%3D%22266%22%20height%3D%22160%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2299.7578125%22%20y%3D%2286%22%3E266x160%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true" style="height: 260px; width: 100%; display: block; margin-bottom: .75rem;">
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">🔧 <span>#улучшили</span> Бодрые карточки</h5>
+                      <p class="card-text">Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!</p>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">🐛 <span>#починили</span> Бодрые карточки</h5>
+                      <p class="card-text">Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире! Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!</p>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">🚀 <span>#новьё</span> Бодрые карточки</h5>
+                      <p class="card-text">Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире! Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире! Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!</p>
                     </div>
                   </div>
                 </div>
